Bug #1240 - Mobile iOS: Footer Breadcrumbs overflow footer area

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -1383,7 +1383,6 @@ body{
 #breadcrumb-container{
     background-color: darken(desaturate(@cyan,1.7%),2.1%);
     margin-top: 60px;
-    height: 50px;
     .breadcrumb-col{
         color: @white;
         line-height: 3.5;
